# mini-judge

./: .cz.toml  .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
output/: judge_answers.jsonl  trial_stats.jsonl
src/mini_judge/: data_io.py  judge_execution.py  judge_prompt.py  main.py  trial_result_manager.py
src/mini_judge/example_data/: candidate_answers.jsonl  questions.jsonl  ref_answers.jsonl
test/: test_judge.py
